[3단계 - 리팩터링] 플린트(이주환) 미션 제출합니다. (#959)
* fix(study): Spring Boot 의존성 관리로 JUnit 정렬 및 테스트 오류 해결

- junit-jupiter-api/engine 직접 버전 제거
- spring-boot-starter-test로 테스트 의존성 일원화
- AssertJ/Mockito 버전 지정 제거해 Boot 관리로 위임
- JUnit Jupiter/Platform 불일치로 인한 NoSuchMethodError 해소

* fix: index.html 상단 바 로그인 블럭 수정

* feat: Controller, AbstractController 추가

* feat: LoginController 추가

* feat: RegisterController 추가

* feat: StaticResourceController 추가

* feat: InternalServerErrorException 추가

* refactor: HttpStatus 500 추가

* refactor: UnauthorizedException 삭제

* feat: ControllerProvider 추가

* feat: http 응답 로직 개선

- ControllerProvider에서 path 기반 controller 탐색 기능 추가
- controller#service 실행 기능 추가

* refactor: HttpController 삭제

* refactor: LoginService 추가

- 유저 로그인 기능 LoginService로 이동

* refactor: RegisterService 추가

- 유저 가입 기능 RegisterService로 이동

* style: 코드 포맷 정리

* refactor: 불필요한 메서드 삭제

* fix: 로그인 실패 처리 try-catch 적용

* refactor: HttpCookie 불필요한 메서드 삭제

* refactor: HttpCookie 생성 로직 수정

* refactor: HttpRequest 생성 로직 수정

- HttpRequest에 bufferedReader 라인 읽기 책임 위임
- HttpRequestBody에 bufferedReader 라인 읽기 책임 제거

* refactor: 대상 controller 탐색 실패 시, 404로 응답하도록 변경

* refactor: 기본 응답 status 설정 로직 추가

* feat: NotFoundException 추가

* refactor: Controller 지원 path 설정 메서드 시그니처 수정

* refactor: 사용자 controller 등록 로직 추가

* refactor: 로그인/회원 가입 컨트롤러 로직 수정

- session 무효화 기능 HttpRequest로 위임
- body element 검색 기능 HttpRequest로 위임

* refactor: 루트 경로 처리 컨트롤러 분리

* refator: HttpCookie 파싱 로직 stream 적용

* fix: 쿠키 파싱 로직 오류 수정

* test: 테스크 클래스에 사용자 Controller 등록 로직 추가

* refactor: HttpResponseBody#withStaticResourceName 로직 수정

* test: 경로 조작 공격 테스트용 데이터 추가 및 공격 감지 로그 추가

* refactor: 대상 Controller 탐색 로직 개선

- Controller#providableUrl 추가
- ControllerProvider#findByPath 수정
- DefaultControllerConfig 추가

---------

Co-authored-by: Claude Code Review Bot <claude-code-review@noreply.github.com>